--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="about.html">Kelly Crowley</a>
+      <a class="navbar-brand" href="#about">Kelly Crowley</a>
     </div>
     <div id="top"vclass="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
