contact page functionality and thank you page

--- a/index.html
+++ b/index.html
@@ -130,16 +130,20 @@
       <p><span class="glyphicon glyphicon-phone"></span> (413) 566-----)</p>
       <p><span class="glyphicon glyphicon-envelope"></span> kelly13crowley@gmail.com</p>
     </div>
+    <script type="text/javascript">var submitted=false;</script>
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" 
+onload="if(submitted) {window.location='thankyou.html';}"></iframe>
+    <form action="https://docs.google.com/forms/d/e/1FAIpQLSfLQj80Qfcbv7GHii1kKSCDOa7gShWCNJaqnoe1ddakZDoXaQ/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
     <div class="col-sm-7 slideanim">
       <div class="row">
         <div class="col-sm-6 form-group">
-          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+          <input class="form-control" id="name" name="entry.2005620554" placeholder="Name*" type="text" required>
         </div>
         <div class="col-sm-6 form-group">
-          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+          <input class="form-control" id="email" name="entry.1045781291" placeholder="Email*" type="email" required>
         </div>
       </div>
-      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+      <textarea class="form-control" id="comments" name="entry.839337160" placeholder="Comment" rows="5"></textarea><br>
       <div class="row">
         <div class="col-sm-12 form-group">
           <button class="btn btn-default pull-right" type="submit">Send</button>
@@ -147,6 +151,7 @@
         </div>
       </div>
     </div>
+  </form>
   </div>
 </div>
 
